bug ok svg fixed

--- a/src/scss/modules/content.scss
+++ b/src/scss/modules/content.scss
@@ -333,7 +333,7 @@
 
             &--ok{
                 padding-right: 24px;
-                background: url(../assets/img/ok.svg) no-repeat right center;
+                background: url(../../assets/img/ok.svg) no-repeat right center;
             }
         }
     }
