--- a/src/scss/base/fonts.scss
+++ b/src/scss/base/fonts.scss
@@ -1,109 +1,109 @@
 @font-face {
     font-family: 'Open Sans';
-    src: url('assets/fonts/OpenSans-Regular.woff2') format('woff2'),
-        url('assets/fonts/OpenSans-Regular.woff') format('woff');
+    src: url('../../assets/fonts/OpenSans-Regular.woff2') format('woff2'),
+        url('../../assets/fonts/OpenSans-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('assets/fonts/Roboto-Bold.woff2') format('woff2'),
-        url('assets/fonts/Roboto-Bold.woff') format('woff');
+    src: url('../../assets/fonts/Roboto-Bold.woff2') format('woff2'),
+        url('../../assets/fonts/Roboto-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('assets/fonts/Roboto-Medium.woff2') format('woff2'),
-        url('assets/fonts/Roboto-Medium.woff') format('woff');
+    src: url('../../assets/fonts/Roboto-Medium.woff2') format('woff2'),
+        url('../../assets/fonts/Roboto-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('assets/fonts/Roboto-Regular.woff2') format('woff2'),
-        url('assets/fonts/Roboto-Regular.woff') format('woff');
+    src: url('../../assets/fonts/Roboto-Regular.woff2') format('woff2'),
+        url('../../assets/fonts/Roboto-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Open Sans';
-    src: url('assets/fonts/OpenSans-SemiBold.woff2') format('woff2'),
-        url('assets/fonts/OpenSans-SemiBold.woff') format('woff');
+    src: url('../../assets/fonts/OpenSans-SemiBold.woff2') format('woff2'),
+        url('../../assets/fonts/OpenSans-SemiBold.woff') format('woff');
     font-weight: 600;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Open Sans';
-    src: url('assets/fonts/OpenSans-Light.woff2') format('woff2'),
-        url('assets/fonts/OpenSans-Light.woff') format('woff');
+    src: url('../../assets/fonts/OpenSans-Light.woff2') format('woff2'),
+        url('../../assets/fonts/OpenSans-Light.woff') format('woff');
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('assets/fonts/Roboto-Thin.woff2') format('woff2'),
-        url('assets/fonts/Roboto-Thin.woff') format('woff');
+    src: url('../../assets/fonts/Roboto-Thin.woff2') format('woff2'),
+        url('../../assets/fonts/Roboto-Thin.woff') format('woff');
     font-weight: 100;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('assets/fonts/Roboto-Light.woff2') format('woff2'),
-        url('assets/fonts/Roboto-Light.woff') format('woff');
+    src: url('../../assets/fonts/Roboto-Light.woff2') format('woff2'),
+        url('../../assets/fonts/Roboto-Light.woff') format('woff');
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Open Sans';
-    src: url('assets/fonts/OpenSans-Bold.woff2') format('woff2'),
-        url('assets/fonts/OpenSans-Bold.woff') format('woff');
+    src: url('../../assets/fonts/OpenSans-Bold.woff2') format('woff2'),
+        url('../../assets/fonts/OpenSans-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Fedra Sans Pro';
-    src: url('assets/fonts/FedraSansPro-Bold.woff2') format('woff2'),
-        url('assets/fonts/FedraSansPro-Bold.woff') format('woff');
+    src: url('../../assets/fonts/FedraSansPro-Bold.woff2') format('woff2'),
+        url('../../assets/fonts/FedraSansPro-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Fedra Sans Pro';
-    src: url('assets/fonts/FedraSansPro-Book.woff2') format('woff2'),
-        url('assets/fonts/FedraSansPro-Book.woff') format('woff');
+    src: url('../../assets/fonts/FedraSansPro-Book.woff2') format('woff2'),
+        url('../../assets/fonts/FedraSansPro-Book.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Fedra Sans Pro';
-    src: url('assets/fonts/FedraSansPro-Light.woff2') format('woff2'),
-        url('assets/fonts/FedraSansPro-Light.woff') format('woff');
+    src: url('../../assets/fonts/FedraSansPro-Light.woff2') format('woff2'),
+        url('../../assets/fonts/FedraSansPro-Light.woff') format('woff');
     font-weight: 300;
     font-style: normal;
 }
 @font-face {
     font-family: 'Fedra Sans Pro';
-    src: url('assets/fonts/FedraSansPro-Medium.woff2') format('woff2'),
-        url('assets/fonts/FedraSansPro-Medium.woff') format('woff');
+    src: url('../../assets/fonts/FedraSansPro-Medium.woff2') format('woff2'),
+        url('../../assets/fonts/FedraSansPro-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
 }
 @font-face {
     font-family: 'Fedra Sans Pro';
-    src: url('assets/fonts/FedraSansPro-MediumItalic.woff2') format('woff2'),
-        url('assets/fonts/FedraSansPro-MediumItalic.woff') format('woff');
+    src: url('../../assets/fonts/FedraSansPro-MediumItalic.woff2') format('woff2'),
+        url('../../assets/fonts/FedraSansPro-MediumItalic.woff') format('woff');
     font-weight: 500;
     font-style: italic;
 }
