--- a/src/scss/modules/footer.scss
+++ b/src/scss/modules/footer.scss
@@ -1,16 +1,20 @@
 .footer{
     border-top: 1px solid $tableBorderColor;
-    font-family: $FedraSansPro;
+    font-family: $OpenSans;
     font-size: 16px;
     line-height: 1.2;
     font-weight: 300;
     color: $footerTextColor;
+    
+    @media all and (max-width: $mediaLG){
+        font-size: 14px;
+    }
 
     &-top{
         display: flex;
         justify-content: flex-start;
         align-self: center;
-        padding: 18px 0;
+        padding: 13px 0;
 
         &-menu{
             @include reset-list;
@@ -18,7 +22,7 @@
 
             &-item{
                 &:not(:last-child){
-                    margin-right: 36px;
+                    margin-right: 20px;
                 }
             }
 
@@ -27,6 +31,8 @@
                 color: inherit;
                 text-decoration: none;
                 font-weight: 400;
+                color: $footerTextColor;
+                font-size: 12px;
 
                 &:hover{
                     opacity: .7;
@@ -67,16 +73,20 @@
     }
 
     &-title{
-        font-size: 20px;
+        font-size: 22px;
         font-weight: bold;
         margin: 0 0 12px;
+
+        @media all and (max-width: $mediaLG){
+            font-size: 18px;
+        }
     }
 
     &-link{
         font-size: inherit;
         color: inherit;
         text-decoration: none;
-        font-weight: 300;
+        font-weight: 400;
         display: block;
 
         &:hover{
@@ -118,13 +128,27 @@
 
     &-item{
         &:not(:last-child){
-            margin-right: 14px;
+            margin-right: 12px;
         }
     }
 
     &-link{
+        width: 20px;
+        height: 20px;
+        display: block;
+
+        img{
+            max-width: 100%;
+            height: auto;
+        }
+
         &:hover{
             opacity: .7;
+        }
+
+        @media all and (max-width: $mediaMD){
+            width: auto;
+            height: auto;
         }
     }
 
