--- a/src/scss/variables/colors.scss
+++ b/src/scss/variables/colors.scss
@@ -13,8 +13,13 @@ $tableRowBg: #fbfbfb;
 $okColor: #1b9162;
 $dangerColor: #f30000;
 $btnBg: #fbfbfd;
-$btnBgHover: #ededf0;
+$btnBgHover: #f5f5f8;
+$btnBgActive: #ededf0;
 $btnBorderColor: #bdbdbd;
 $btnBorderColorHover: #c1c1c1;
+$btnBorderColorActive: #c1c1c1;
 $footerTextColor: #282828;
 $mobBg: #f0f0f0;
+$shadowColor: #dbdbdb;
+$subMenuHover: #f54c4d;
+$linkColor: #184dbd;
