--- a/src/scss/modules/content.scss
+++ b/src/scss/modules/content.scss
@@ -15,9 +15,12 @@
     border-radius: 6px;
 
     @media all and (max-width: $mediaMD){
+        margin-bottom: 20px;
+    }
+    @media all and (max-width: $mediaSM){
         padding: 0;
-        margin-bottom: 28px;
         background-color: transparent;
+        margin-bottom: 28px;
     }
 
     &:not(:last-child){
@@ -41,15 +44,17 @@
         border-radius: 6px;
         margin: 10px 0 24px;
 
-        @media all and (max-width: $mediaLG){
+        @media all and (max-width: $mediaSM){
             padding: 10px 6px;
+            overflow: auto;
+            width: 100%;
+            margin: 16px 0;
         }
 
-        @media all and (max-width: $mediaSM){
-            overflow: auto;
+        @media all and (max-width: $mediaXS){
             width: calc(100% + 12px);
             border-radius: 0;
-            margin: 16px 0 16px -6px;
+            margin-left: -6px;
         }
 
         &-item{
@@ -57,7 +62,7 @@
                 margin-right: 4px;
 
                 @media all and (max-width: $mediaLG){
-                    margin-right: 0
+                    margin-right: 0;
                 }
             }
             
@@ -76,7 +81,7 @@
                 background-color: $white;
             }
 
-            @media all and (max-width: $mediaLG){
+            @media all and (max-width: $mediaSM){
                 font-size: 12px;
                 padding: 5px 8px;
             }
@@ -89,7 +94,7 @@
         width: 100%;
         position: relative;
 
-        @media all and (max-width: $mediaLG){
+        @media all and (max-width: $mediaMD){
             table-layout: fixed;
         }
 
@@ -102,9 +107,11 @@
             border-radius: 6px;
             overflow: hidden;
 
-            @media all and (max-width: $mediaMD){
+            @media all and (max-width: $mediaXS){
                 margin: 0 -6px;
                 border-radius: 0;
+                border-left: none;
+                border-right: none;
             }
         }
 
@@ -113,13 +120,15 @@
             border-bottom: 1px solid $infoColor;
         }
 
+        $cotentTable: &;
+
         &-row{
             display: table-row;
 
             &--bggrey{
                 background-color: $tableRowBg;
 
-                @media all and (max-width: $mediaLG){
+                @media all and (max-width: $mediaSM){
                     background-color: transparent;
                 }
             }
@@ -127,10 +136,19 @@
             &--mob{
                 display: none !important;
 
-                @media all and (max-width: $mediaLG){
+                @media all and (max-width: $mediaMD){
                     display: table-row !important;
-                    height: 40px;
+                    height: 63px;
                     // transform: translateY(1px);
+
+                    #{$cotentTable}-item:first-child{
+                        min-width: 100%;
+                        width: 100%;
+                        max-width: 100%;
+                    }
+                }
+                @media all and (max-width: $mediaSM){
+                    height: 40px;
                 }
             }
         }
@@ -145,15 +163,21 @@
             text-align: center;
             
             @media all and (max-width: $mediaXL){
-                padding: 10px;
+                padding: 8px;
             }
 
-            @media all and (max-width: $mediaMD){
-                padding: 10px 6px;
+            @media all and (max-width: $mediaLG){
+                padding: 8px;
 
                 &:last-child{
                     width: 54px;
+                    min-width: 54px;
+                    max-width: 54px;
                 }
+            }
+
+            @media all and (max-width: $mediaSM){
+                padding: 10px 6px;
             }
 
             &:not(:last-child){
@@ -164,13 +188,17 @@
                 width: 100%;
                 text-align: left;
 
-                @media all and (max-width: $mediaLG){
+                @media all and (max-width: $mediaMD){
                     width: 100%;
                     text-align: left;
                     position: absolute;
                     // left: 0;
                     // top: 0;
-                    padding: 6px;
+                    padding: 10px;
+                }
+                
+                @media all and (max-width: $mediaSM){
+                    padding: 10px 6px;
                 }
             }
 
@@ -185,12 +213,16 @@
                 &:first-child{
                     text-align: center;
 
-                    @media all and (max-width: $mediaLG){
+                    @media all and (max-width: $mediaMD){
                         display: none;
                     }
                 }
                 
                 @media all and (max-width: $mediaLG){
+                    padding: 5px 6px;
+                }
+
+                @media all and (max-width: $mediaMD){
                     padding: 4px 6px;
                 }
             }
@@ -209,10 +241,38 @@
         }
 
         @media all and (max-width: $mediaLG){
+            min-width: 46px;
+            width: 46px;
+            height: 46px;
+            margin-right: 6px;
+        }
+        @media all and (max-width: $mediaMD){
+            min-width: 44px;
+            width: 44px;
+            height: 44px;
+        }
+        @media all and (max-width: $mediaSM){
             min-width: 24px;
             width: 24px;
             height: 24px;
             margin-right: 4px;
+        }
+    }
+
+    &-title{
+        &:not(:last-child){
+            margin-right: 16px;
+        }
+
+        &-link{
+            display: inline-block;
+            color: inherit;
+            text-decoration: none;
+            
+            &:hover,
+            &:active{
+                color: $dangerColor;
+            }
         }
     }
 
@@ -229,14 +289,19 @@
             vertical-align: middle;
         }
 
-        @media all and (max-width: $mediaLG){
+        @media all and (max-width: $mediaMD){
             font-size: 12px;
             margin-bottom: 0;
+            white-space: nowrap;
+        }
+        
+        @media all and (max-width: $mediaLG){
+            white-space: unset;
         }
     }
 
     &-title{
-        @media all and (max-width: $mediaLG){
+        @media all and (max-width: $mediaMD){
             display: flex;
             justify-content: flex-start;
             align-items: center;
@@ -274,10 +339,22 @@
             }
             
             @media all and (max-width: $mediaXL){
+                font-size: 22px;
+            }
+            
+            @media all and (max-width: $mediaLG){
                 font-size: 20px;
             }
 
-            @media all and (max-width: $mediaLG){
+            @media all and (max-width: $mediaMD){
+                font-size: 22px;
+            }
+
+            @media all and (max-width: $mediaSM){
+                font-size: 20px;
+            }
+
+            @media all and (max-width: $mediaXS){
                 font-size: 16px;
             }
         }
@@ -301,10 +378,14 @@
             white-space: nowrap;
 
             
-            @media all and (max-width: $mediaLG){
+            @media all and (max-width: $mediaSM){
                 font-size: 9px;
                 text-overflow: ellipsis;
                 overflow: hidden;
+            }
+
+            @media all and (max-width: $mediaLG){
+                white-space: unset;
             }
         }
 
@@ -344,6 +425,9 @@
         padding: 12px;
 
         @media all and (max-width: $mediaLG){
+            padding: 10px;
+        }
+        @media all and (max-width: $mediaSM){
             padding: 6px;
         }
     }
@@ -354,7 +438,7 @@
         font-size: 14px;
         font-weight: bold;
 
-        @media all and (max-width: $mediaLG){
+        @media all and (max-width: $mediaMD){
             font-size: 13px;
             padding: 4px 6px;
         }
