--- a/src/scss/modules/sidebar.scss
+++ b/src/scss/modules/sidebar.scss
@@ -5,6 +5,12 @@
     top: 24px;
 
 
+    @media all and (max-width: $mediaXL){
+        width: 280px;
+        min-width: 280px;
+    }
+
+
     @media all and (max-width: $mediaMD){
         display: none;
     }
@@ -13,33 +19,27 @@
         @include reset-list;
 
         &-link{
-            font-family: $FedraSansPro;
-            font-size: 20px;
+            font-family: $OpenSans;
+            font-size: 18px;
             line-height: 1.2;
-            font-weight: 300;
             text-decoration: none;
             color: $mainTextColor;
             display: inline-block;
 
-            &:hover,
-            &:active{
-                opacity: .7;
-            }
-
             &.current{
-                font-weight: 400;
+                font-weight: bold;
 
                 &:before{
                     content: '';
                     display: block;
                     position: absolute;
                     left: -24px;
-                    top: 0;
-                    bottom: 0;
+                    top: 4px;
+                    bottom: 4px;
                     width: 3px;
                     border-top-right-radius: 4px;
                     border-bottom-right-radius: 4px;
-                    height: 100%;
+                    height: auto;
                     background: linear-gradient(to bottom, $gradientColor1, $gradientColor2);
                 }
             }
@@ -54,14 +54,19 @@
         &-item{
             line-height: 1.2;
             position: relative;
-            padding: 13px 0 13px 26px;
+            padding-top: 6px;
+            padding-bottom: 6px;
+
+            &.icon{
+                padding-left: 26px;
+            }
         }
 
         $p: &;
 
         &--small{
             & .sidebar-list-link{
-                font-size: 16px;
+                font-size: 18px;
             }
         }
 
@@ -72,26 +77,15 @@
             }
             #{$p}-item{
                 padding-top: 6px;
-                padding-bottom: 6px;
+
+                &:not(:last-child){
+                    padding-bottom: 6px;
+                }
             }
         }
 
         &--dotted{
-            #{$p}-item{
-                position: relative;
-                &:before{
-                    content: '';
-                    display: block;
-                    position: absolute;
-                    width: 2px;
-                    height: 2px;
-                    border-radius: 2px;
-                    border: solid 1px $infoColor;
-                    left: 13px;
-                    top: 50%;
-                    margin-top: -1px;
-                }
-            }
+            @include dotted-list;
         }
 
         &-row{
@@ -111,7 +105,7 @@
 
         &-value{
             color: $infoColor;
-            font-size: 16px;
+            font-size: 14px;
             font-weight: 300;
 
             .icon{
@@ -124,12 +118,12 @@
 
     &-item{
         background-color: $white;
-        padding: 0 16px 0 24px;
+        padding: 10px 16px 10px 24px;
         border-radius: 4px;
         overflow: hidden;
 
         &:not(:last-child){
-            margin-bottom: 24px;
+            margin-bottom: 4px;
         }
     }
 
