--- a/src/scss/modules/header.scss
+++ b/src/scss/modules/header.scss
@@ -107,7 +107,7 @@
 
             &:not(:last-child){
                 @media all and (min-width: $mediaMD){
-                    margin-right: 15px;
+                    margin-right: 16px;
                 }
                 @media all and (min-width: $mediaLG){
                     margin-right: 28px;
@@ -140,6 +140,10 @@
             overflow: hidden;
             margin-top: -3px;
             width: auto;
+
+            @media all and (max-width: $mediaMD){
+                display: none;
+            }
 
             &--helper{
                 width: 0;
@@ -295,6 +299,9 @@
                     height: 3px;
                     width: 100%;
                 }
+            }
+            @media all and (max-width: $mediaLG){
+                font-size: 13px;
             }
 
             @media all and (max-width: $mediaMD){
