--- a/src/scss/variables/media.scss
+++ b/src/scss/variables/media.scss
@@ -1,6 +1,7 @@
 $mediaXS: 450px ;
 $mediaSM: 563px;
 $mediaMD: 959px;
+$mediaLG2: 1100px;
 $mediaLG: 1199px;
 $mediaXL: 1439px;
 $mediaMAX: 99999px;
