--- a/src/scss/variables/colors.scss
+++ b/src/scss/variables/colors.scss
@@ -18,8 +18,27 @@ $btnBgActive: #ededf0;
 $btnBorderColor: #bdbdbd;
 $btnBorderColorHover: #c1c1c1;
 $btnBorderColorActive: #c1c1c1;
+
+$btnBg2: #184dbd;
+$btnShadow2: rgba(0, 0, 0, 0.25);
+$btnBgHover2: #133a8c;
+$btnBgActive2: #0f2f71;
+
+
 $footerTextColor: #282828;
 $mobBg: #f0f0f0;
 $shadowColor: #dbdbdb;
 $subMenuHover: #f54c4d;
 $linkColor: #184dbd;
+
+$contentMenuBg: #f1f3f5;
+$bkNumColor: #e1e1e1;
+$bkFeedbackColor: #45b8fd;
+$advColor1: #484538;
+$advColor2: #fb4b4e;
+$advColor3: #9b4bfb;
+$matchBottomBg: #178fe1;
+
+$newsBg1: #178fe1;
+
+$actualColor: #fef8eb;
