--- a/src/scss/variables/media.scss
+++ b/src/scss/variables/media.scss
@@ -1,5 +1,7 @@
-$mediaXS: 450px ;
+$mediaXSS: 400px;
+$mediaXS: 450px;
 $mediaSM: 563px;
+$mediaSMB: 680px;
 $mediaMD: 959px;
 $mediaLG2: 1100px;
 $mediaLG: 1199px;
@@ -25,6 +27,17 @@ $mediaMAX: 99999px;
 .hidden-md-up{
     display: none !important;
     @media all and (max-width: $mediaMD){
+        display: block !important;
+    }
+}
+.hidden-sm-down{
+    @media all and (max-width: $mediaSM){
+        display: none !important;
+    }
+}
+.hidden-sm-up{
+    display: none !important;
+    @media all and (max-width: $mediaSM){
         display: block !important;
     }
 }
