--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -8,8 +8,10 @@
 @import 'base/base';
 
 @import 'modules/header';
-@import 'modules/sidebar';
-@import 'modules/content';
+@import 'modules/sidebar-left';
+@import 'modules/sidebar-right';
+@import 'modules/contests';
+@import 'modules/main';
 @import 'modules/footer';
 
 
