--- a/src/scss/modules/contests.scss
+++ b/src/scss/modules/contests.scss
@@ -1,14 +1,3 @@
-.content{
-    width: 100%;
-    margin-left: 24px;
-    padding: 10px 0;
-    align-self: stretch;
-    
-    @media all and (max-width: $mediaMD){
-        margin-left: 0;
-    }
-}
-
 .contest{
     background-color: $white;
     padding: 24px;
@@ -36,56 +25,8 @@
     }
 
     &-menu{
-        @include reset-list;
-        @include horizontal-list;
-        background-color: $sidebarHeadBg;
-        padding: 12px;
-        display: inline-flex;
-        border-radius: 6px;
+        @include content-menu($sidebarHeadBg, 6px, $Roboto);
         margin: 10px 0 24px;
-
-        @media all and (max-width: $mediaSM){
-            padding: 10px 6px;
-            overflow: auto;
-            width: 100%;
-            margin: 16px 0;
-        }
-
-        @media all and (max-width: $mediaXS){
-            width: calc(100% + 12px);
-            border-radius: 0;
-            margin-left: -6px;
-        }
-
-        &-item{
-            &:not(:last-child){
-                margin-right: 4px;
-
-                @media all and (max-width: $mediaLG){
-                    margin-right: 0;
-                }
-            }
-            
-        }
-        &-link{
-            display: inline-block;
-            padding: 8px 16px;
-            font-size: 14px;
-            text-decoration: none;
-            font-family: $Roboto;
-            color: $mainTextColor;
-            border-radius: 6px;
-            white-space: nowrap;
-            
-            &.active{
-                background-color: $white;
-            }
-
-            @media all and (max-width: $mediaSM){
-                font-size: 12px;
-                padding: 5px 8px;
-            }
-        }
     }
 
     &-table{
@@ -268,10 +209,14 @@
             display: inline-block;
             color: inherit;
             text-decoration: none;
+            white-space: nowrap;
             
             &:hover,
             &:active{
                 color: $dangerColor;
+            }
+            @media all and (max-width: $mediaLG){
+                white-space: unset;
             }
         }
     }
@@ -282,11 +227,11 @@
         font-weight: bold;
         overflow: hidden;
         text-overflow: ellipsis;
-        white-space: nowrap;
+        // white-space: nowrap;
 
         .icon{
             display: inline-block;
-            vertical-align: middle;
+            vertical-align: bottom;
         }
 
         @media all and (max-width: $mediaMD){
@@ -377,10 +322,14 @@
             line-height: 1.2;
             white-space: nowrap;
 
-            @media all and (max-width: $mediaLG2){
-                max-width: 80px;
+            @media all and (max-width: $mediaXL){
+                max-width: 100px;
                 overflow: hidden;
                 text-overflow: ellipsis;
+                display: inline-block;
+            }
+            @media all and (max-width: $mediaLG2){
+                max-width: 58px;
             }
             
             @media all and (max-width: $mediaMD){
