--- a/src/scss/modules/sidebar-right.scss
+++ b/src/scss/modules/sidebar-right.scss
@@ -55,7 +55,24 @@
             }
 
             &__top{
-                margin-bottom: 12px;
+                margin-bottom: 10px;
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+            }
+
+            &__avatar{
+                width: 36px;
+                height: 36px;
+                border-radius: 100%;
+                overflow: hidden;
+                margin-right: 8px;
+
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
             }
 
             &__name{
