--- a/src/scss/modules/main.scss
+++ b/src/scss/modules/main.scss
@@ -333,10 +333,10 @@
         &__row{
             display: table-row;
             
-            box-shadow: inset 0 -1px 0 0 $bodyBg;
+            border-bottom: 1px solid $bodyBg;
 
             @media all and (max-width: $mediaSM){
-                box-shadow: inset 0 -1px 0 0 $mobBg;
+                border-bottom: 1px solid $mobBg;
                 
             }
 
