--- a/src/scss/mixins/clear.scss
+++ b/src/scss/mixins/clear.scss
@@ -55,7 +55,12 @@
     font-weight: bold;
     text-decoration: none;
     display: inline-block;
-    transition: all .2s ease;
+    // transition: all .2s ease;
+    
+    span{
+        position: relative;
+        top: 0;
+    }
 
     &:hover{
         border: solid 1px $btnBCH;
@@ -66,6 +71,10 @@
         border: solid 1px $btnBCA;
         background-color: $btnBgA;
         color: $color;
+
+        span{
+            top: 1px;
+        }
     }
 }
 
