--- a/src/scss/modules/main.scss
+++ b/src/scss/modules/main.scss
@@ -840,6 +840,8 @@
             border-radius: 0;
             position: relative;
             padding-bottom: 42px;
+            padding-left: 6px;
+            padding-right: 6px;
 
             &:not(:nth-child(2n)){
                 margin-right: 0;
@@ -929,11 +931,29 @@
             }
 
             &__logo{
+                width: 18px;
+                height: 18px;
+                border-radius: 100%;
+                overflow: hidden;
+                display: inline-block;
+                margin-right: 4px;
+                vertical-align: middle;
 
+                @media all and (max-width: $mediaSM){
+                    width: 16px;
+                    height: 16px;
+                }
+
+                img{
+                    width: 100%;
+                    height: 100%;
+                }
             }
             &__name{
                 font-size: 14px;
                 font-weight: bold;
+                display: inline-block;
+                vertical-align: middle;
 
                 @media all and (max-width: $mediaSM){
                     font-size: 12px;
@@ -1033,6 +1053,7 @@
         border-radius: 6px;
         display: inline-block;
         margin: 0 auto;
+        font-weight: bold;
         
         @media all and (max-width: $mediaSM){
             font-size: 13px;
@@ -1223,6 +1244,8 @@
                 width: 100%;
                 margin-bottom: 8px;
                 border-radius: 0;
+                padding-left: 6px;
+                padding-right: 6px;
                 
                 &:first-child{
                     margin-right: 0;
@@ -1334,6 +1357,11 @@
                     margin-right: -10px;
                     padding-bottom: 6px;
                 }
+
+                @media all and (max-width: $mediaXS){
+                    margin-left: 0;
+                    margin-right: 0;
+                }
             }
 
             &__author{
@@ -1363,6 +1391,7 @@
                     vertical-align: bottom;
                     margin-right: 1px;
                     transition: all .3s ease;
+                    display: inline-block;
                 }
 
                 &:hover{
