--- a/src/scss/modules/sidebar-right.scss
+++ b/src/scss/modules/sidebar-right.scss
@@ -117,6 +117,11 @@
                 }
             }
 
+            &__link{
+                text-decoration: none;
+                color: inherit;
+            }
+
             &__text{
                 background-color: $white;
                 position: relative;
