--- a/src/scss/modules/header.scss
+++ b/src/scss/modules/header.scss
@@ -121,12 +121,13 @@
                     // opacity: 1;
                     // visibility: visible;
                     // transition: all .3s ease-in-out;
+                    display: block;
                 }
 
                 #{$headerMenu}-sub--helper{
-                    max-height: 400px;
-                    animation: showSubMenu .7s ease-in-out;
-                    width: 100%;
+                    // max-height: 400px;
+                    // animation: showSubMenu .7s ease-in-out;
+                    // width: 100%;
                 }
             }
         }
@@ -140,20 +141,21 @@
             overflow: hidden;
             margin-top: -3px;
             width: auto;
+            display: none;
 
             @media all and (max-width: $mediaMD){
                 display: none;
             }
 
             &--helper{
-                width: 0;
+                width: 100%;
                 height: 100%;
-                max-height: 3px;
+                // max-height: 3px;
                 padding-top: 3px;
                 position: relative;
                 background-color: $white;
-                transition: max-height .4s ease-in-out,
-                            width .3s .4s ease-in-out;
+                // transition: max-height .4s ease-in-out,
+                //             width .3s .4s ease-in-out;
 
                 &:before{
                     content: '';
